--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.2.2"
 django-cors-headers = "^3.13.0"
 psycopg2-binary = "^2.9.5"
+python-decouple = "^3.7"
 
 
 [build-system]
