--- a/api/nginx/default.conf
+++ b/api/nginx/default.conf
@@ -71,7 +71,7 @@ server {
 
     }
 
-    location /post/ {
+    location /posts/ {
 
         if ($request_method = 'OPTIONS') {
 
@@ -101,7 +101,7 @@ server {
 
     }
 
-    location /comment/ {
+    location /comments/ {
 
         if ($request_method = 'OPTIONS') {
 
@@ -131,7 +131,7 @@ server {
 
     }
 
-    location /category/ {
+    location /categories/ {
 
         if ($request_method = 'OPTIONS') {
 
@@ -161,7 +161,7 @@ server {
 
     }
 
-    location /tag/ {
+    location /tags/ {
 
         if ($request_method = 'OPTIONS') {
 
