--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework-simplejwt = "^5.2.2"
 django-cors-headers = "^3.13.0"
 psycopg2-binary = "^2.9.5"
 python-decouple = "^3.7"
+gunicorn = "^20.1.0"
 
 
 [build-system]
