ignore file default.conf

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,6 +11,11 @@ services:
     volumes:
         - ../api/dbdata:/var/lib/postgresql/data/:delegated
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   base_api:
     container_name: base_api
@@ -19,9 +24,9 @@ services:
       dockerfile: ../docker/dockerfiles/api/Dockerfile
     volumes:
       - ../api:/code:delegated
+    tty: true
     ports:
       - "8000:8000"
-    tty: true
     depends_on:
       - base_db
     
