#8 add reset password

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -25,6 +25,8 @@ services:
     volumes:
       - ../api:/code:delegated
     tty: true
+    ports:
+      - "8000:8000"
     depends_on:
       - base_db
     
