--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -14,6 +14,7 @@ django-cors-headers = "^3.13.0"
 psycopg2-binary = "^2.9.5"
 python-decouple = "^3.7"
 gunicorn = "^20.1.0"
+django-rest-passwordreset = "^1.3.0"
 
 
 [build-system]
