--- a/web/package.json
+++ b/web/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "start": "vite preview --host 0.0.0.0 --port 8080 --open index.html"
+    "preview": "vite preview"
   },
   "dependencies": {
     "antd": "^5.2.3",
