--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -52,7 +52,7 @@ services:
       dockerfile: ../docker/dockerfiles/web
     volumes:
       - ../web:/code:delegated
-      - /code/node_modules
+      - ../web/node_modules:/code/node_modules
     ports:
       - "5173:5173"
     command: npm run dev
