--- a/web/package.json
+++ b/web/package.json
@@ -11,8 +11,14 @@
   "dependencies": {
     "antd": "^5.2.3",
     "axios": "^1.3.4",
+    "base64-js": "^1.5.1",
+    "path-browserify": "^1.0.1",
+    "quill": "^1.3.7",
+    "quill-image-drop-module": "^1.0.3",
+    "quill-image-resize-module": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.8.2"
   },
   "devDependencies": {
