--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -54,6 +54,8 @@ services:
       - ../web:/code:delegated
       - ../web/node_modules:/code/node_modules
     ports:
-      - "5173:5173"
-    command: npm run dev
+      - "5173:80"
+    command: nginx -g "daemon off;"
+    environment:
+      - NODE_ENV=production
     tty: true
