--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -56,6 +56,7 @@ services:
     ports:
       - "5173:80"
     command: nginx -g "daemon off;"
-    environment:
-      - NODE_ENV=production
+    # ports:
+    #   - "5173:80"
+    # command: npm run dev
     tty: true
