--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -15,6 +15,8 @@ psycopg2-binary = "^2.9.5"
 python-decouple = "^3.7"
 gunicorn = "^20.1.0"
 django-rest-passwordreset = "^1.3.0"
+pillow = "^9.5.0"
+django-cron = "^0.6.0"
 
 
 [build-system]
