--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.26.5",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/list": "^1.8.0",
     "antd": "^5.2.3",
     "axios": "^1.3.4",
     "base64-js": "^1.5.1",
@@ -23,6 +26,8 @@
     "serve": "^14.2.0"
   },
   "devDependencies": {
+    "@editorjs/image": "^2.8.1",
+    "@editorjs/link": "^2.5.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
