--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -17,6 +17,7 @@ gunicorn = "^20.1.0"
 django-rest-passwordreset = "^1.3.0"
 pillow = "^9.5.0"
 django-cron = "^0.6.0"
+django-crontab = "^0.7.1"
 
 
 [build-system]
