--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     tty: true
     ports:
       - "8000:8000"
-    command: poetry run gunicorn core.wsgi:application --bind 0.0.0.0:8000
+    # command: poetry run gunicorn core.wsgi:application --bind 0.0.0.0:8000
     depends_on:
       - base_db
 
