--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     tty: true
     ports:
       - "8000:8000"
-    # command: poetry run gunicorn core.wsgi:application --bind 0.0.0.0:8000
+    command: poetry run gunicorn core.wsgi:application --bind 0.0.0.0:8000
     depends_on:
       - base_db
 
@@ -55,8 +55,6 @@ services:
       - ../web/node_modules:/code/node_modules
     ports:
       - "5173:80"
-    # command: nginx -g "daemon off;"
-    # ports:
-    #   - "5173:80"
-    command: npm run dev
+    command: nginx -g "daemon off;"
+    # command: npm run dev
     tty: true
