--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.2.3",
     "axios": "^1.3.4",
     "base64-js": "^1.5.1",
+    "editorjs-html": "^3.4.2",
     "path-browserify": "^1.0.1",
     "quill": "^1.3.7",
     "quill-image-drop-module": "^1.0.3",
